Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jinrui (Carrie) Chu | NUS</title>
+    <meta name="google-site-verification" content="X6jtqhdcj5PV_8opiPp3AZEh2Gy0YRmth1Fjtq94Ins" />
     <style>
         :root {
             --primary-color: #2c3e50; 
